# routes/api.php
@@ -3,14 +3,14 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\UserController;
 
 Route::group(['prefix' => 'v1'], function () {
-
-    Route::post('/register', [AuthController::class, 'register']);
+    Route::post('/register', [AuthController::class, 'register'])->name('register');
+    Route::post('/login', [AuthController::class, 'login'])->name('login');
 
     Route::middleware('auth:sanctum')->group(function () {
-        Route::get('/me', function (Request $request) {
-            return $request->user();
-        });
+        Route::get('/me', [UserController::class, 'me'])->name('me');
+        Route::delete('/logout', [AuthController::class, 'logout'])->name('logout');
     });
 });
